라이브데이터 추가, 더미 데이터 생성

--- a/TTogilgi/app/src/main/res/layout/fragment_list.xml
+++ b/TTogilgi/app/src/main/res/layout/fragment_list.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragment.ListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/diaryListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="일기 리스트" />
+        android:background="@color/colorPrimary"
+        tools:listitem="@layout/item_diary" />
 
 </FrameLayout>
