--- a/TTogilgi/app/src/main/res/menu/list_fragment_toolbar_menu.xml
+++ b/TTogilgi/app/src/main/res/menu/list_fragment_toolbar_menu.xml
@@ -2,21 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/list_tab"
-        android:icon="@drawable/diary_list_icon"
-        android:title="일기 목록"
-        app:showAsAction="always" />
-
-    <item
         android:id="@+id/searchButton"
-        android:icon="@drawable/graph_icon"
-        android:title="감정 변화"
+        android:icon="@drawable/search_icon"
+        android:title="찾아보기"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/addButton"
-        android:icon="@drawable/settings_icon"
-        android:title="설정"
+        android:icon="@drawable/add_icon"
+        android:title="일기추가"
         app:showAsAction="always"/>
-
 </menu>
