--- a/TTogilgi/app/src/main/res/layout/fragment_list.xml
+++ b/TTogilgi/app/src/main/res/layout/fragment_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.ListFragment">
+    tools:context=".fragment.ListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/diaryListView"
