--- a/TTogilgi/app/src/main/res/values/colors.xml
+++ b/TTogilgi/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="brownColor">#8B4513</color>
     <color name="oliveColor">#808000</color>
+    <color name="dimGreyColor">#696969</color>
 </resources>
