--- a/TTogilgi/app/src/main/res/values/styles.xml
+++ b/TTogilgi/app/src/main/res/values/styles.xml
@@ -29,9 +29,19 @@
         <item name="android:textSize">16sp</item>
         <item name="android:gravity">bottom</item>
         <item name="android:textColor">@color/brownColor</item>
-        <item name="android:maxLines">5</item>
+        <item name="android:maxLines">2</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:text"> 요약 내용 </item>
+        <item name="android:text"> Summary </item>
+    </style>
+
+    <style name="Contents_TextView_style">
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">top</item>
+        <item name="android:textColor">@color/dimGreyColor</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:maxLines">100</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:text"> Contents </item>
     </style>
 
 </resources>
