--- a/TTogilgi/app/src/main/res/values/styles.xml
+++ b/TTogilgi/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
         <item name="android:textSize">19sp</item>
         <item name="android:gravity">bottom</item>
         <item name="android:textColor">@color/brownColor</item>
-        <item name="android:text"> SAT </item>
+        <item name="android:text"> WED </item>
     </style>
 
     <style name="Summary_TextView_style">
@@ -37,7 +37,7 @@
     <style name="Contents_TextView_style">
         <item name="android:textSize">16sp</item>
         <item name="android:gravity">top</item>
-        <item name="android:textColor">@color/dimGreyColor</item>
+        <item name="android:textColor">@color/brownColor</item>
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:maxLines">100</item>
         <item name="android:ellipsize">end</item>
