--- a/TTogilgi/app/src/main/res/layout/activity_login.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />
 
     <Button
-        android:id="@+id/registerBtn"
+        android:id="@+id/signUpBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
