--- a/TTogilgi/app/src/main/res/layout/activity_sign_up.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_sign_up.xml
@@ -5,65 +5,78 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.SignUpActivity">
+
     <EditText
-        android:id="@+id/idEdit"
+        android:id="@+id/usernameEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="150dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="닉네임"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/passwordEdit"
+        android:id="@+id/emailEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:inputType="textPassword"
-        android:hint="비밀번호"
+        android:hint="이메일"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/usernameEdit" />
 
     <EditText
-        android:id="@+id/passwordCheckEdit"
+        android:id="@+id/password1Edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:ems="10"
+        android:hint="비밀번호(8자리 이상)"
         android:inputType="textPassword"
-        android:hint="비밀번호 확인"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/password2Edit" />
+
+    <EditText
+        android:id="@+id/password2Edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:ems="10"
+        android:hint="비밀번호 확인 (8자리 이상)"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailEdit" />
 
     <Button
         android:id="@+id/signUpRequestBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="가입신청"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordCheckEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/password1Edit" />
 
     <Button
         android:id="@+id/goBackBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="돌아가기"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/signUpRequestBtn"
-        app:layout_constraintTop_toBottomOf="@+id/passwordCheckEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/password1Edit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
