--- a/TTogilgi/app/src/main/res/layout/fragment_setting.xml
+++ b/TTogilgi/app/src/main/res/layout/fragment_setting.xml
@@ -60,7 +60,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/logoutText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="350dp"
