--- a/TTogilgi/app/src/main/res/layout/activity_detail.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".diary.diaryDetail.DetailActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -22,7 +23,6 @@
         style="@style/Contents_TextView_style"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
