인트로 화면 수정, 폰트 변경

--- a/TTogilgi/app/src/main/res/layout/activity_intro.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_intro.xml
@@ -10,8 +10,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="200dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginBottom="400dp"
         android:text="똑일기"
-        android:textSize="30dp"
+        android:textSize="40dp"
+        android:fontFamily="@font/nanumpen"
         android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
