--- a/TTogilgi/app/src/main/res/menu/edit_activity_toolbar_menu.xml
+++ b/TTogilgi/app/src/main/res/menu/edit_activity_toolbar_menu.xml
@@ -4,6 +4,7 @@
 
     <item android:id="@+id/action_save"
         android:title="저장"
+        android:icon="@drawable/ic_save"
         app:showAsAction="always" />
 
 </menu>
