--- a/TTogilgi/app/src/main/res/layout/activity_password_change.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_password_change.xml
@@ -1,82 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".login.SignUpActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <EditText
-        android:id="@+id/usernameEdit"
+        android:id="@+id/currentPasswordEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
-        android:ems="10"
-        android:hint="닉네임"
-        android:inputType="textPersonName"
+        android:layout_marginTop="200dp"
+        android:ems="11"
+        android:hint="현재 비밀번호"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/emailEdit"
+        android:id="@+id/newPassword1Edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="이메일"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameEdit" />
-
-    <EditText
-        android:id="@+id/password1Edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="비밀번호 확인 (8자리 이상)"
+        android:ems="11"
+        android:hint="새 비밀번호(8자리 이상)"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password2Edit" />
+        app:layout_constraintTop_toBottomOf="@+id/currentPasswordEdit" />
 
     <EditText
-        android:id="@+id/password2Edit"
+        android:id="@+id/newPassword2Edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="비밀번호 (8자리 이상)"
+        android:ems="11"
+        android:hint="새 비밀번호 확인(8자리 이상)"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/newPassword1Edit" />
 
     <Button
-        android:id="@+id/signUpRequestBtn"
+        android:id="@+id/changeRequestBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:backgroundTint="@color/colorPrimary"
-        android:text="가입신청"
+        android:text="변경신청"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password1Edit" />
+        app:layout_constraintTop_toBottomOf="@+id/newPassword2Edit" />
 
     <Button
         android:id="@+id/goBackBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="돌아가기"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/signUpRequestBtn"
-        app:layout_constraintTop_toBottomOf="@+id/password1Edit" />
+        app:layout_constraintStart_toEndOf="@+id/changeRequestBtn"
+        app:layout_constraintTop_toBottomOf="@+id/newPassword2Edit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
