emotionViewModel 관련 코드 수정. GraphFragment 활성화

--- a/TTogilgi/app/src/main/res/layout/item_diary.xml
+++ b/TTogilgi/app/src/main/res/layout/item_diary.xml
@@ -21,14 +21,14 @@
 
             <ImageView
                 android:id="@+id/diaryCardImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="26dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_smile" />
+                app:srcCompat="@drawable/ic_notebook" />
 
             <TextView
                 android:id="@+id/dateView"
