GraphFragment 수정: 그래프가 바로 연동되지 않는 사항 수정 -> onResume()에서 makeChart()를 처리하도록 변경

--- a/TTogilgi/app/src/main/res/layout/activity_intro.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_intro.xml
@@ -10,15 +10,23 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
-        android:layout_marginLeft="200dp"
         android:layout_marginBottom="400dp"
+        android:fontFamily="@font/nanumpen"
         android:text="똑일기"
         android:textSize="40dp"
-        android:fontFamily="@font/nanumpen"
         android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_notebook" />
 </androidx.constraintlayout.widget.ConstraintLayout>
