--- a/TTogilgi/app/src/main/res/menu/main_activity_bottom_menu.xml
+++ b/TTogilgi/app/src/main/res/menu/main_activity_bottom_menu.xml
@@ -3,19 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/list_tab"
-        android:icon="@drawable/diary_list_icon"
+        android:icon="@drawable/ic_diarys"
         android:title="일기 목록"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/searchButton"
-        android:icon="@drawable/graph_icon"
+        android:icon="@drawable/ic_graph"
         android:title="감정 변화"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/addButton"
-        android:icon="@drawable/settings_icon"
+        android:icon="@drawable/ic_settings"
         android:title="설정"
         app:showAsAction="always"/>
 
