--- a/TTogilgi/app/src/main/res/values/styles.xml
+++ b/TTogilgi/app/src/main/res/values/styles.xml
@@ -10,9 +10,10 @@
 
     <style name="Date_TextView_style">
         <item name="android:maxLines">1</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">19sp</item>
         <item name="android:gravity">bottom</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/nanumsquareroundr</item>
         <item name="android:textColor">@color/brownColor</item>
         <item name="android:text"> 0418 </item>
     </style>
@@ -21,13 +22,17 @@
         <item name="android:maxLines">1</item>
         <item name="android:textSize">19sp</item>
         <item name="android:gravity">bottom</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/nanumsquareroundr</item>
         <item name="android:textColor">@color/brownColor</item>
         <item name="android:text"> WED </item>
     </style>
 
     <style name="Summary_TextView_style">
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">19sp</item>
         <item name="android:gravity">bottom</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/nanumsquareroundr</item>
         <item name="android:textColor">@color/brownColor</item>
         <item name="android:maxLines">2</item>
         <item name="android:ellipsize">end</item>
@@ -38,8 +43,10 @@
 <!--        <item name="">@color/colorPrimary</item>-->
         <item name="android:layout_margin">16dp</item>
         <item name="android:padding">8dp</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">19sp</item>
         <item name="android:gravity">top</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/nanumsquareroundr</item>
         <item name="android:textColor">@color/brownColor</item>
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:maxLines">100</item>
