--- a/TTogilgi/app/src/main/res/layout/activity_sign_up.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_sign_up.xml
@@ -56,27 +56,22 @@
 
     <Button
         android:id="@+id/signUpRequestBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="102dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="가입신청"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/password1Edit"
         app:layout_constraintTop_toBottomOf="@+id/password1Edit" />
 
     <Button
         android:id="@+id/goBackBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="102dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_marginTop="32dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="돌아가기"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/signUpRequestBtn"
+        app:layout_constraintEnd_toEndOf="@+id/password1Edit"
         app:layout_constraintTop_toBottomOf="@+id/password1Edit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
