일기 삭제 -> AlertDialog 추가

--- a/TTogilgi/app/src/main/res/values/styles.xml
+++ b/TTogilgi/app/src/main/res/values/styles.xml
@@ -64,4 +64,16 @@
         <item name="android:text"> Contents </item>
     </style>
 
+    <style name="AlertButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/brownColor</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="buttonBarPositiveButtonStyle">@style/AlertButtonStyle</item>
+        <item name="buttonBarNegativeButtonStyle">@style/AlertButtonStyle</item>
+    </style>
+
 </resources>
