일기 디테일 보기 -> 감정 아이콘과 감정 문구 추가

--- a/TTogilgi/app/src/main/res/menu/main_activity_bottom_menu.xml
+++ b/TTogilgi/app/src/main/res/menu/main_activity_bottom_menu.xml
@@ -8,7 +8,7 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/searchButton"
+        android:id="@+id/graph_tap"
         android:icon="@drawable/ic_graph"
         android:title="감정 변화"
         app:showAsAction="always" />
