--- a/TTogilgi/app/src/main/res/layout/activity_detail.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_detail.xml
@@ -18,6 +18,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/emotionImage"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detailToolbar"
+        app:srcCompat="@drawable/ic_notebook" />
+
+    <TextView
+        android:id="@+id/emotionText"
+        style="@style/Emotion_TextView_style"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="32dp"
+        android:text="감정에 대한 글"
+        app:layout_constraintBottom_toTopOf="@+id/contentView"
+        app:layout_constraintStart_toEndOf="@+id/emotionImage"
+        app:layout_constraintTop_toBottomOf="@+id/detailToolbar" />
+
     <TextView
         android:id="@+id/contentView"
         style="@style/Contents_TextView_style"
@@ -26,5 +50,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailToolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/emotionImage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
