--- a/TTogilgi/app/src/main/res/values/colors.xml
+++ b/TTogilgi/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFDFB9</color>
+    <color name="colorPrimary">#FFEBCD</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="brownColor">#8B4513</color>
