--- a/TTogilgi/app/src/main/res/values/colors.xml
+++ b/TTogilgi/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="brownColor">#8B4513</color>
+    <color name="liteBrownColor">#DEB887</color>
     <color name="oliveColor">#808000</color>
     <color name="dimGreyColor">#696969</color>
+    <color name="liteGreyColor">#909090</color>
 </resources>
