--- a/TTogilgi/app/src/main/res/layout/activity_password_change.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_password_change.xml
@@ -42,27 +42,22 @@
 
     <Button
         android:id="@+id/changeRequestBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="변경신청"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/newPassword2Edit"
         app:layout_constraintTop_toBottomOf="@+id/newPassword2Edit" />
 
     <Button
         android:id="@+id/goBackBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="돌아가기"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/changeRequestBtn"
+        app:layout_constraintEnd_toEndOf="@+id/newPassword2Edit"
         app:layout_constraintTop_toBottomOf="@+id/newPassword2Edit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
