감정 그래프에서 기간별로 감정을 볼 수 있도록 수정 -> 1. 기간 별로 감정 뷰모델을 만든 후에 2. 현재 날짜와 일기 날짜의 차이를 이용하여 기간 별로 감정 뷰모델을 세팅 3. 탭레이아웃을 이용하여 기간 별로 감정 그래프 도출

--- a/TTogilgi/app/src/main/res/layout/fragment_graph.xml
+++ b/TTogilgi/app/src/main/res/layout/fragment_graph.xml
@@ -18,7 +18,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_margin="32dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginTop="8dp"
             style="@style/GraphTabLayoutStyle">
 
             <com.google.android.material.tabs.TabItem
